# cutout-test

./: README.md  csv_logger.py  pyproject.toml  resnet.py  train.py
logs/: cifar100_resnet18.csv  cifar100_resnet18nc.csv
